# c-server

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CleanAll.cmake  Makefile  README.md  compile_commands.json  hello_world.c
include/: handle_request.h  handle_response.h  parse_http.h  setup.h
src/: handle_request.c  handle_response.c  hello_world.c  main.c  parse_http.c  setup.c
